additional input styles. Buttons, and radio and checkboxes

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,9 @@ layout: default
 	</div>
 </div>
 
-<div class="column three-fourths">
-	{{ content }}
+<div class="row">
+	<div class="large-12 columns style-content">
+		{{ content }}
+	</div>
 </div>
 
