--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,5 +18,6 @@
   <!-- RSS -->
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}atom.xml">
 
+  <script src="/a/js/vendor/modernizr.js"></script>
 </head>
 <body>
