--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,10 @@
 			</div>
 			<div class="large-6 small-12 columns show-for-large-up">
 				<ul class="utility">
-					<li><img src="/a/i/utility/us-flag.svg" alt=""> <img src="/a/i/utility/utility-dd.svg" alt=""></li>
-					<li>Sign In <img src="/a/i/utility/utility-dd.svg" alt=""></li>
+					<li><img src="{{ site.baseurl }}/a/i/utility/us-flag.svg" alt=""> <img src="/a/i/utility/utility-dd.svg" alt=""></li>
+					<li>Sign In <img src="{{ site.baseurl }}/a/i/utility/utility-dd.svg" alt=""></li>
 					<li>Wishlist</li>
-					<li class="bag-btn"><img class="bag-icon" src="/a/i/utility/bag-icon.svg" alt=""><span class="cart-items">99</span></li>
+					<li class="bag-btn"><img class="bag-icon" src="{{ site.baseurl }}/a/i/utility/bag-icon.svg" alt=""><span class="cart-items">99</span></li>
 				</ul>
 			</div>
 		</div>
@@ -26,7 +26,7 @@
 					<li><a href="/guidelines/">Guidelines</a></li>
 					<li><a href="#">Base CSS</a></li>
 					<li><a href="#">Components</a></li>
-					<li class="fp-logo"><a href="#"><img src="/a/i/logo-header.png" alt=""></a></li>
+					<li class="fp-logo"><a href="#"><img src="{{ site.baseurl }}/a/i/logo-header.png" alt=""></a></li>
 					<li><a href="#">Javascript</a></li>
 					<li><a href="#">Mixins</a></li>
 					<li><a href="#">Depracated</a></li>
