--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 			</div>
 			<div class="large-6 small-12 columns show-for-large-up">
 				<ul class="utility">
-					<li><img src="{{ site.baseurl }}a/i/utility/us-flag.svg" alt=""> <img src="site.baseurl }}a/i/utility/utility-dd.svg" alt=""></li>
+					<li><img src="{{ site.baseurl }}a/i/utility/us-flag.svg" alt=""> <img src="{{ site.baseurl }}a/i/utility/utility-dd.svg" alt=""></li>
 					<li>Sign In <img src="{{ site.baseurl }}a/i/utility/utility-dd.svg" alt=""></li>
 					<li>Wishlist</li>
 					<li class="bag-btn"><img class="bag-icon" src="{{ site.baseurl }}a/i/utility/bag-icon.svg" alt=""><span class="cart-items">99</span></li>
@@ -23,7 +23,7 @@
 		<div class="row">
 			<div class="large-12 columns">
 				<ul class="links">
-					<li><a href="site.baseurl }}guidelines/">Guidelines</a></li>
+					<li><a href="/guidelines/">Guidelines</a></li>
 					<li><a href="#">Base CSS</a></li>
 					<li><a href="#">Components</a></li>
 					<li class="fp-logo"><a href="#"><img src="{{ site.baseurl }}a/i/logo-header.png" alt=""></a></li>
